feat: Implement experimental read api
